# metu

./: .env.example  .gitignore  .lintstagedrc.json  .vercelignore  CHANGELOG.md  README.md  commitlint.config.cjs  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: copilot-instructions.md
.github/instructions/: agent-and-conductor.instructions.md  auth-and-oauth.instructions.md  drizzle-db.instructions.md  hub-realtime.instructions.md  inngest-workflows.instructions.md  mobile-expo.instructions.md  monorepo.instructions.md  nextjs-web.instructions.md  page-layout.instructions.md  sdk-and-protocol.instructions.md  security.instructions.md  tauri-companion.instructions.md  testing.instructions.md  ui-styling.instructions.md
.github/workflows/: actionlint.yml  ci.yml  db-migrate.yml  deploy-hub.yml  deploy-inngest.yml  deploy-mcp-server.yml  deploy-web.yml  deploy-worker.yml  release-browser-ext.yml  release-companion.yml  release-sdk.yml  release-vscode-ext.yml
.husky/: pre-commit
.vercel/: project.json
apps/browser-ext/: .gitignore  CHANGELOG.md  background.js  content.js  manifest.json  options.html  options.js  package.json  popup.html  popup.js
apps/companion/: .env.example  .gitignore  CHANGELOG.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/companion/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/companion/src-tauri/capabilities/: default.json
apps/companion/src-tauri/icons/: .gitkeep
apps/companion/src-tauri/src/: a11y.rs  caps.rs  diag.rs  forms.rs  fs.rs  input.rs  lib.rs  main.rs  mdns.rs  oauth.rs  pet.rs  screenshot.rs  see.rs  sense.rs  sensors.rs  shell.rs  spatial.rs  windowing.rs
apps/hub/: .env.example  Dockerfile  eslint.config.mjs  package.json  tsconfig.json
apps/mcp-server/: Dockerfile  package.json  tsconfig.json
apps/mobile/: app.json  package.json  tsconfig.json
apps/notai/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/vscode-ext/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json  tsconfig.json
apps/web/: eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  next.config.ts  package.json  tsconfig.json  vitest.config.ts
docs/: a11y-backends.md  architecture.md  byok.md  cache-components.md  companion-agent-v2-plan.md  companion-avatar-world.md  companion-jarvis-plan.md  companion-jarvis-v3-plan.md  companion-v1.5.md  deployment.md  development.md  github-integration.md  integrations.md  master-plan.md  mcp.md  mobile-push-setup.md  mobile-wake-word.md  notai.md  observability.md  presence.md  research-2026-06.md  sdk-quickstart-notai.md  sdk-quickstart.md  security.md  voice.md
pages/: index.tsx
scripts/: bootstrap-env.mjs  bootstrap-gcp.ps1  check-actionlint.mjs  companion-signing-key.mjs  ensure-companion-icon.mjs  lint-workspace-scope.mjs  package-browser-ext.mjs  release-companion.mjs  seed-companion-client.sql
(+712 files in other folders)
